tests/snapshots/e2e__feature_tests__exec__PowerShell.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
echo 'v8.10.0' > '.nvmrc'
fnm install
fnm install v6.10.0
fnm install v10.10.0
If ("$(fnm exec -- node -v)" -ne "v8.10.0") {
    Write-Output ('Expected version file exec to be "v8.10.0", Got: ' + $(fnm exec -- node -v))
    exit 1
}

If ("$(fnm exec --using=6 -- node -v)" -ne "v6.10.0") {
    Write-Output ('Expected exec:6 node -v to be "v6.10.0", Got: ' + $(fnm exec --using=6 -- node -v))
    exit 1
}

If ("$(fnm exec --using=10 -- node -v)" -ne "v10.10.0") {
    Write-Output ('Expected exec:6 node -v to be "v10.10.0", Got: ' + $(fnm exec --using=10 -- node -v))
    exit 1
}
